# translation

./: .gitignore  README.md  basic_main.py  createcheck.py  environment.yaml  inference.py  init.sh  lrfinder.py  main.py  mt.txt  pyproject.toml  requirements.txt  run.py  setup.py  sweep.yaml  transformer_inference.py  transformer_main.py
config/: config.yaml  sweep.yaml
data/: source.pkl  target.pkl  tokenizer_en.model  tokenizer_en.vocab  tokenizer_fr.model  tokenizer_fr.vocab
data/test/: translation.csv  translations.csv
data/val/: translation.csv  translations.csv
data/valid/: translations.csv
scripts/: dataset.py  model.py  test_model.py  transformer_model.py  utils.py
temp/: snippets.pyt  vocab_gen.py
tests/: test_bleu.py
